Nav bar fixes
1)mystyles.css: added a headnavR for float right and renamed headNav to headNavL for float left.
2)index.html: added a github logo on the right of the nav bar. But the image is too small. Have to make it bigger w/out distorting the pic.
3)Added a github logo pic for the header.

--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,6 @@
 /* This is my style sheet for my website */
 
-ul.headNav {
+ul.headNavL {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -11,8 +11,12 @@ ul.headNav {
     width: 100%;
 }
 
-li.headNav {
+li.headNavL {
     float: left;
+}
+
+li.headNavR {
+    float: right;
 }
 
 li a {
